tests/NormalTests/paczka1/small_fuzzy/17418442.err
Error in line 2: gZf S614 54,2
Error in line 1: IG7FQK A693 97,6
Error in line 12: Z07IC9Y S585 11,6
